# OpenGL-Learning

./: .gitmodules  CMakeLists.txt  README.md  env.cpp  main.cpp  ui.cpp
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
asset/: test.txt
asset/material/: box.json
asset/material/nanosuit/: arm.json  body.json  glass.json  hand.json  helmet.json  leg.json
asset/prefab/: box.json  nanosuit.json
asset/shader/: phong.fs  phong.vs  test.fs  test.vs
plan/: Light.md  Renderer.asta
src/: common.h  gui.cpp  gui.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  timer.cpp  timer.h  times.cpp  times.h  window.cpp  window.h
src/lib/: file.cpp  file.h  math.cpp  math.h  model.cpp  model.h  resource.cpp  resource.h  text.cpp  text.h
src/render/: camera.cpp  camera.h  lighting.cpp  lighting.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh.hpp  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
src/render/renderer/: base.cpp  base.h
src/util/: array.hpp  color.hpp  prefab.cpp  prefab.h  tranUnit.hpp  tween.cpp  tween.h
